--- a/src/public/css/auth/register.css
+++ b/src/public/css/auth/register.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f9f9f9;
+    background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,12 +32,13 @@ body {
     font-weight: bold;
     display: block;
     margin-bottom: 10px;
+    margin-left: -270px;
 }
 
 .register-form__input {
     position: relative;
     margin-bottom: 5px;
-    width: 600%;
+    width: 400%;
     height: 40px;
     left: 50%;
     transform: translateX(-50%);
@@ -58,18 +59,25 @@ body {
 }
 
 .register-form__btn {
-    width: 100%;
+    width: 330%;
     padding: 10px;
     font-size: 18px;
     font-weight: bold;
-    background-color: #007bff;
+    color: white;
+    background-color: red;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     transition: 0.3s;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    box-sizing: border-box;
 }
 
 a {
+    position: relative;
+    left: 40px;
     margin-top: 10px;
     text-decoration: none;
     color: #007bff;
