--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -1,7 +1,12 @@
 .logo-img {
     position: absolute;
     top: 5px;
-    left: 20px;
-    width: 450px;
-    height: auto;
+    left: 0px;
+    width: 400px;
+    height: 50px;
+    margin: 0;
+    padding: 10px 20px;
+    position: absolute;
+    background-color: black;
+    z-index: 1000;
 }
