--- a/src/public/css/auth/login.css
+++ b/src/public/css/auth/login.css
@@ -18,7 +18,7 @@
 
 .login-form__heading {
     font-size: 24px;
-    left: 30px;
+    margin-left: 200px;
     font-weight: bold;
     margin-bottom: 30px;
 }
