--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -1,3 +1,16 @@
+.top-bar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80px;
+    background-color: black;
+    z-index: 1000;
+}
+
+
+
+
 .logo-img {
     position: absolute;
     top: 5px;
