--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -8,9 +8,6 @@
     z-index: 1000;
 }
 
-
-
-
 .logo-img {
     position: absolute;
     top: 5px;
@@ -22,4 +19,18 @@
     position: absolute;
     background-color: black;
     z-index: 1000;
+}
+
+.logout {
+    position: absolute;
+    right: 400px;
+    top: 20px;
+    font-size: 20px;
+    color: white;
+    text-decoration: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    z-index: 1100;
+
+
 }
