--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -25,10 +25,11 @@
     position: absolute;
     right: 400px;
     top: 20px;
-    font-size: 20px;
+    font-size: 25px;
     color: white;
-    text-decoration: none;
-    padding: 10px 15px;
-    border-radius: 5px;
     z-index: 1100;
+    background: none;
+    padding: 0;
+    text-decoration: none;
+    border: none;
 }
