--- a/src/public/css/auth/index.css
+++ b/src/public/css/auth/index.css
@@ -1,5 +1,22 @@
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 50px;
+}
+
+.col-md-2 {
+    flex: 1 1 calc(20% - 10px);
+    max-width: calc(20% - 10px);
+}
+
 .custom-img {
-    width: 13%;
-    height: 20%;
+    width: 100%;
+    height: auto;
     object-fit: cover;
+}
+
+.image-container {
+    padding-top: 150px;
 }
