--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -23,7 +23,7 @@
 
 .logout {
     position: absolute;
-    right: 400px;
+    right: 380px;
     top: 20px;
     font-size: 25px;
     color: white;
@@ -42,11 +42,23 @@
 
 .mypage {
     position: absolute;
-    right: 250px;
+    right: 220px;
     top: 20px;
     font-size: 25px;
     color: white;
     text-decoration: none;
     background: none;
+}
+
+.sell {
+    position: absolute;
+    right: 100px;
+    top: 8px;
+    font-size: 25px;
+    color: black;
+    text-decoration: none;
+    background: rgb(255, 255, 255);
+    padding: 15px;
+    border-radius: 5px;
 }
 
