--- a/src/public/css/auth/item.css
+++ b/src/public/css/auth/item.css
@@ -16,7 +16,7 @@
     width: 100%;
 }
 
-.purchage-button {
+.purchase-button {
     display: inline-block;
     background-color: red;
     color: white;
