--- a/src/public/css/auth/index.css
+++ b/src/public/css/auth/index.css
@@ -19,4 +19,18 @@
 
 .image-container {
     padding-top: 150px;
+    display: flex;
+    gap: 20px;
+    margin-top: 100px;
+    margin-top: 80px;
 }
+
+.category {
+    display: flex;
+    gap: 20px;
+    margin-top: 100px;
+    margin-top: 80px;
+}
+
+
+
