--- a/src/public/css/auth/sell.css
+++ b/src/public/css/auth/sell.css
@@ -18,6 +18,15 @@
     padding: 20px;
 }
 
+#description {
+    width: 100%;
+    height: 150px;
+    padding: 10px;
+    resize: vertical;
+}
+
+
+
 .sell-form__form {
     display: flex;
     flex-direction: column;
