--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -62,3 +62,40 @@
     border-radius: 5px;
 }
 
+
+
+.search-container {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.search-form {
+    display: flex;
+    width: 21%;
+    background: white;
+    padding: 6px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+
+.search-input {
+    flex: 1;
+    padding: 6px;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+}
+
+.search-button {
+    padding: 6px;
+    border : none;
+    background-color: #007bff;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+
