--- a/src/public/css/auth/login.css
+++ b/src/public/css/auth/login.css
@@ -44,7 +44,7 @@
     height: 40px;
     left: 50%;
     transform: translateX(-50%);
-    display: block;
+    display: flex;
     box-sizing: block;
     box-sizing: border-box;
 }
