--- a/src/public/css/auth/sell.css
+++ b/src/public/css/auth/sell.css
@@ -2,9 +2,6 @@
     max-width: 600px;
     margin: 50px auto;
     padding: 20px;
-    background: #f8f9fa;
-    border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
 .sell-form__heading {
@@ -25,14 +22,27 @@
     resize: vertical;
 }
 
-
-
 .sell-form__form {
     display: flex;
     flex-direction: column;
 }
 
-.sell-form__input,
+.sell-form__button {
+    width: 160px;
+    height: 50px;
+    background: white;
+    border-radius: 20px;
+    border:2px solid red;
+    color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    cursor: pointer;
+    margin-left: auto;
+    margin-right: 160px;
+}
+
 .sell-detail__input {
     width: 100%;
     padding: 10px;
@@ -41,11 +51,10 @@
     font-size: 16px;
 }
 
-.sell-form__input:focus,
-.sell-detail__input:focus {
-    border-color: #007bff;
-    outline: none;
+.sell-form__input {
+    display: none;
 }
+
 
 .sell-form__label,
 .sell-detail__label {
@@ -62,19 +71,3 @@ select {
     border-radius: 5px;
 }
 
-.btn a {
-    display: block;
-    width: 100%;
-    background-color: #007bff;
-    color: white;
-        padding: 10px;
-        text-align: center;
-        font-size: 18px;
-        border-radius: 5px;
-        text-decoration: none;
-        margin-top: 20px;
-    }
-
-    .btn a:hover {
-        background-color: #0056b3;
-    }
