--- a/src/public/css/auth/sell.css
+++ b/src/public/css/auth/sell.css
@@ -4,8 +4,9 @@
     padding: 20px;
 }
 
+
 .sell-form__heading {
-    font-size: 24px;
+    font-size: 35px;
     font-weight: bold;
     text-align: center;
     margin-bottom: 20px;
@@ -24,12 +25,7 @@
     padding: 20px;
 }
 
-#description {
-    width: 100%;
-    height: 150px;
-    padding: 10px;
-    resize: vertical;
-}
+
 
 .sell-form__form {
     display: flex;
@@ -61,6 +57,10 @@
 
 }
 
+.sell-form__input {
+    display: none;
+}
+
 .sell-detail__input {
     width: 100%;
     padding: 10px;
@@ -69,8 +69,22 @@
     font-size: 16px;
 }
 
-.sell-form__input {
-    display: none;
+.category-list {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.category-item {
+    padding: 10px 20px;
+    border: 2px solid red;
+    border-radius: 30px;
+    display: inline-block;
+    font-size: 13px;
+    color: red;
+    text-align: center;
 }
 
 
@@ -79,6 +93,13 @@
     font-size: 16px;
     font-weight: bold;
     margin-top: 10px;
+}
+
+#description {
+    width: 100%;
+    height: 150px;
+    padding: 10px;
+    resize: vertical;
 }
 
 select {
