--- a/src/public/css/auth/sell.css
+++ b/src/public/css/auth/sell.css
@@ -4,7 +4,6 @@
     padding: 20px;
 }
 
-
 .sell-form__heading {
     font-size: 35px;
     font-weight: bold;
@@ -69,6 +68,7 @@
     font-size: 16px;
 }
 
+
 .category-list {
     list-style: none;
     padding: 0;
@@ -79,12 +79,33 @@
 
 .category-item {
     padding: 10px 20px;
+    border: 10px;
     border: 2px solid red;
     border-radius: 30px;
+    box-sizing: border-box;
     display: inline-block;
     font-size: 13px;
     color: red;
     text-align: center;
+    transition: background 0.3s, border-color 0.3s, color 0.3s;
+}
+
+.category-item input[type="checkbox"] {
+    opacity: 0;
+    position: absolute;
+}
+
+.category-item:hover label {
+    cursor: pointer;
+    color:red;
+}
+
+.category-item input[type="checkbox"]:checked + label {
+    background: red;
+    color:white;
+    border: 15px solid #ff0000;
+    border-radius: 30px;
+    width: 150px;
 }
 
 
@@ -93,6 +114,18 @@
     font-size: 16px;
     font-weight: bold;
     margin-top: 10px;
+}
+
+.sell-date__input {
+    position: relative;
+        margin-bottom: 5px;
+        width: 100%;
+        height: 40px;
+        left: 50%;
+        transform: translateX(-50%);
+        display: flex;
+        box-sizing: block;
+        box-sizing: border-box;
 }
 
 #description {
@@ -109,4 +142,6 @@ select {
     border: 1px solid #ccc;
     border-radius: 5px;
 }
+
+
 
