--- a/src/public/css/auth/profile.css
+++ b/src/public/css/auth/profile.css
@@ -23,5 +23,25 @@
     left: 0;
     width: 100%;
     height: 2px;
+}
 
+.profile-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.profile-image img {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 3px solid #ccc;
+    margin-top: 100px;
+}
+
+.profile-name {
+    font-size: 20px;
+    color: #333;
 }
