変更しました。

--- a/src/public/css/auth/index.css
+++ b/src/public/css/auth/index.css
@@ -1,36 +1,80 @@
-.row {
+.items{
     display: flex;
     flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 35px 10px;
+}
+
+.sold{
+    position: relative;
+}
+
+.sold::before {
+    content: "";
+    top: 0;
+    left: 0;
+    border-bottom: 4em solid transparent;
+    border-left: 4em solid #c12748;
+    position: absolute;
+    z-index: 100;
+}
+.sold::after {
+    content:"Sold";
+    display: block;
+    top: 1em;
+    transform: rotate(-45deg);
+    color: fff;
+    left: 0.2em;
+    position: absolute;
+    z-index: 101;
+}
+
+/* sold::beforeとsold::afterは商品が売れきれた時の擬似要素のcssデザイン */
+
+.item__img--container{
+    background-color: rgb(208, 208,208);
+    border-radius: 5px;
+    width: 15em;
+    height: 15em;
+    display: flex;
     justify-content: center;
-    gap: 10px;
+    align-items: center;
+}
+/* 売れていない時の通常の画像のcssスタイル */
+
+.item__img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.item__name{
+    margin-top: 10px;
+}
+
+.border{
     margin-top: 50px;
 }
 
-.col-md-2 {
-    flex: 1 1 calc(20% - 10px);
-    max-width: calc(20% - 10px);
-}
-
-.custom-img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-}
-
-.image-container {
-    padding-top: 150px;
+.border__list{
+    border-bottom: 1px solid #5F5F5F;
     display: flex;
-    gap: 20px;
-    margin-top: 100px;
-    margin-top: 80px;
 }
 
-.category {
-    display: flex;
-    gap: 20px;
-    margin-top: 100px;
-    margin-top: 80px;
+.border__list li:first-child{
+    padding-left: 10%;
 }
+/* 一番最初の<li>タグ */
 
+.border__list li{
+    padding: 20px 80px;
+    font-weight: bold;
+}
+/* 全ての<li>タグ */
 
-
+@media (min-width: 768px) and (max-width: 850px) {
+    .item__img--container {
+        width: 25vw;
+        height: 10em;
+    }
+}
