--- a/src/public/css/auth/profile.css
+++ b/src/public/css/auth/profile.css
@@ -1,47 +1,17 @@
-.btn {
-    position: absolute;
-    top: 200px;
-    right: 400px;
-    padding: 10px 20px;
-    background-color: white;
-    text-align: center;
-    border-radius: 50px;
-    border: 2px solid red;
-    font-size: 20px;
-    text-decoration: none;
-}
-
-.btn a{
-    color: red;
-    text-decoration: none;
-}
-
-.silver-line {
-    position: absolute;
-    background-color: silver;
-    top: 40%;
-    left: 0;
-    width: 100%;
-    height: 2px;
-}
-
-.profile-container {
+.user{
     display: flex;
-    flex-direction: column;
     align-items: center;
-    text-align: center;
+    margin-bottom: 50px;
 }
 
-.profile-image img {
-    width: 120px;
-    height: 120px;
+.user__img{
+    width: 150px;
+    height: 150px;
+    margin-right:60px;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
     border-radius: 50%;
-    object-fit: cover;
-    border: 3px solid #ccc;
-    margin-top: 100px;
-}
+    background-color: #d9d9d9;
 
-.profile-name {
-    font-size: 20px;
-    color: #333;
 }
