--- a/src/public/css/auth/purchase.css
+++ b/src/public/css/auth/purchase.css
@@ -1,16 +1,113 @@
-.purchase-form__group {
-    margin-left: 600px;
-    margin-top: 200px;
+.buy{
+    display: flex;
+    justify-content: space-around;
 }
 
-.price {
+.buy__left{
+    width: 45%;
+}
+
+.buy__right{
+    width: fit-content;
+}
+
+.item{
+    display: flex;
+}
+
+.item__img{
+    width: 120px;
+    height: 150px;
+    background-color: #d9d9d9;
+    border-radius: 5px;
+    margin-right: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.item__name{
     font-size: 24px;
 }
 
-.image-upload  img{
-    width: 200;
-    height: auto;
-    margin-left: 300px;
-    margin-top: -150px;
+.item__price{
+    font-size: 20px;
+    margin-top: 30px;
 }
 
+.purchases{
+    margin-top: 50px;
+}
+
+.purchase{
+    border-top: 1px solid #5F5F5F;
+    border-bottom: 1px solid #5F5F5F;
+    padding: 30px;
+}
+
+.purchase:first-child{
+    border-bottom: none;
+}
+
+.purchase__flex{
+    display: flex;
+    justify-content: space-between;
+}
+
+.purchase__update{
+    color: #0073cc;
+}
+
+.purchase__value{
+    padding: 40px 50px;
+}
+
+.input_destination{
+    border: none;
+    padding:10px 0;
+    margin-bottom: 10px;
+}
+
+.setting__flex{
+    display: flex;
+    justify-content: end;
+}
+
+#destination__setting{
+    display: none;
+}
+
+.buy__info table{
+    width: 450px;
+    margin-bottom: 60px;
+}
+
+.buy__info tr{
+    border: 1px solid #5F5F5F;
+}
+
+.buy__info th, .buy__info td{
+    width: 50%;
+    height: 100px;
+    padding: 50px;
+}
+
+@media (min-width: 768px) and (max-width:850px) {
+    .buy__right {
+        width: 45%
+    }
+
+    .buy__info table {
+        width: 100%;
+    }
+
+    #purchase_btn {
+        width: 100%;
+    }
+
+    .table__header ,
+    .table__data{
+        padding: unset !important;
+        vertical-align: middle;
+    }
+}
